updated env